--- a/ClientSide Code/src/app/tasks/tasks.component.html
+++ b/ClientSide Code/src/app/tasks/tasks.component.html
@@ -1,3 +1,30 @@
-<p>
-  tasks works!
-</p>
+<div class="container">
+    <div class="row">
+        <div class="col-md-6 col-md-offset-3">
+            <h1>Todo List</h1>
+            <hr />
+            <form>
+                <div class="input-group">
+                    <input type="text" class="form-control" placeholder="Your task">
+                    <span class="input-group-addon" type="submit">Add</span>
+                </div>
+            </form>
+            <table class=" table table-dark table-striped todo-list">
+                <tr *ngFor='let task of tasks; let i= index;'>
+                    <td>{{task}}</td>
+                    <td class="text-right">
+                        <button class="btn btn-success">
+                            <i class="glyphicon glyphicon-ok"></i>
+                        </button>
+                        <button class="btn btn-info">
+                            <i class="glyphicon glyphicon-repeat"></i>
+                        </button>
+                        <button class="btn btn-danger">
+                            <i class="glyphicon glyphicon-remove"></i>
+                        </button>
+                    </td>
+                </tr>
+            </table>
+        </div>
+    </div>
+</div>
