--- a/ClientSide Code/src/styles.css
+++ b/ClientSide Code/src/styles.css
@@ -1,1 +1,10 @@
 /* You can add global styles to this file, and also import other style files */
+
+.todo-list {
+    margin-top: 15px;
+}
+  
+.todo-completed {
+    text-decoration: line-through;
+}
+  
