--- a/ClientSide Code/src/app/app.component.html
+++ b/ClientSide Code/src/app/app.component.html
@@ -3,9 +3,9 @@
   <h1>
     {{ title }}!
   </h1>
+  <p>A To Do App Created Using Angular!</p>
 </div>
 <router-outlet></router-outlet>
-
 
 <script src="https://code.jquery.com/jquery-1.12.0.min.js"></script>
 <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.12.0.min.js"><\/script>')</script>
